--- a/screen.css
+++ b/screen.css
@@ -16,15 +16,17 @@ html, body {
 }
 
 .post-container {
-    height: 100%;
     overflow: auto;
     padding-bottom: 20px;
+    height: calc(100% - 100px);
 }
 
 .side {
     overflow: hidden;
-    padding-top: 100px;
     left: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    margin-top: 100px;
 }
 
 .side header {
